Phoenix 7211 : Identify IT tests that can be run successfully against real distributed cluster